--- a/portfolio.html
+++ b/portfolio.html
@@ -20,10 +20,10 @@
                 <a href="./index.html" class="logo">Web<span class="logo logo--black">Studio</span></a>
                 <ul class="page-header__list">
                     <li class="page-header__item">
-                        <a href="./index.html" class="page-header__link page-header__link--current">Студия</a>
+                        <a href="./index.html" class="page-header__link">Студия</a>
                     </li>
                     <li class="page-header__item">
-                        <a href="./portfolio.html" class="page-header__link">Портфолио</a>
+                        <a href="./portfolio.html" class="page-header__link page-header__link--current">Портфолио</a>
                     </li>
                     <li class="page-header__item">
                         <a href="contacts" class="page-header__link">Контакты</a>
